--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,11 +20,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    В случае ошибки с com.vk:androidsdk:1.6.5
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'})
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    /*compile project 'com.vk:androidsdk:1.6.5'*/
+    compile 'com.vk:androidsdk:1.6.5'
     compile 'com.android.support:multidex:1.0.0'
 }
