--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.vk:androidsdk:1.6.5'
     compile 'com.android.support:multidex:1.0.0'
+    compile 'com.arello-mobile:moxy:1.5.3'
+
+    annotationProcessor 'com.arello-mobile:moxy-compiler:1.5.3'
+
+
+    compile 'com.arello-mobile:moxy-android:1.5.3'
+
+    compile 'com.arello-mobile:moxy-app-compat:1.5.3'
 }
